--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,8 @@ add_executable(${MAIN_EXECUTABLE_NAME}
         src/GameOverScreen.h
         src/MinigamePlayer.cpp
         src/MinigamePlayer.h
+        src/Fish.cpp
+        src/Fish.h
 )
 
 # NOTE: Add all defined targets (e.g. executables, libraries, etc. )
