commit with new derived class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,8 @@ add_executable(${MAIN_EXECUTABLE_NAME}
     src/Pufferfish.h
         src/GameExceptions.cpp
         src/GameExceptions.h
+        src/Squid.cpp
+        src/Squid.h
 )
 
 # NOTE: Add all defined targets (e.g. executables, libraries, etc. )
